src/test/resources/frontendReference/invalid/syntaxErr/print/printlnCharArry.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:10 -- no viable alternative at input '['
1 parser error(s) detected, no further compilation attempted.
